OnboardingV2Minimal/force-app/main/default/objects/License__c/License__c.object-meta.xml
<CustomObject>
    <description>This object stores all the different types of licenses needed by PerfectVision and our Vendors and relates it back to the Dealer.</description>
    <label>License</label>
    <nameField>
        <displayFormat>LCNS-{00000}</displayFormat>
        <label>License Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>