OnboardingV2Minimal/force-app/main/default/objects/License__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>Business License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>